--- a/src/index.css
+++ b/src/index.css
@@ -5,30 +5,30 @@ body {
   text-align: left;
 }
 
-.accordion{
+.employees{
     width:300px;
 }
 
-.accordion li{
+.employees li{
     list-style-type: none;
     text-align: left;
     border:1px solid grey;
 }
 
-.accordion li:not(:first-child){
+.employees li:not(:first-child){
     border-top:none;
 }
 
-.accordion .title{
+.employees .name{
     background:rgba(0,0,0,0.6);
     color:white;
     padding:10px;
-    cursor: pointer;
+    cursor: pointer
 }
 
-.accordion .content{
+.employees .bio{
     padding:10px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .hidden{
